--- a/1.Develop_Hardware.md
+++ b/1.Develop_Hardware.md
@@ -1,23 +1,131 @@
 # Develop hardware - Device tree file - FSBL(First stage boot loader)
-
+> ⚠️ _Note: It is mandatory to install all xilinx software as Vivado, Vitis. Vitis goes with XSCT(Xilinx command-line tools), can help us run Xilinx script without using Vitis_ \
+> Create an alias in .bashrc to help running XSCT in current folder. \
+> or if you don't have a habit of using it, then add "_alias xsct='source /PATH-TO-VITIS/VITIS-VERSION/settings64.sh; xsct_'".
 
 ## Peripheral utilisation
 For simplicity, in this tutorial we only use 8 Leds on Zedboard
-| Offset               | Name | Access  | Description |
-| :----------------: | :------: | :----: | :--:|
-| 0         |   led   | RW  | on board LEDs|
+| Offset  | Name     | Access  | Description  |
+| :-----: | :------: | :----:  | :--:         |
+| 0       |   led    | RW      | on board LEDs|
 
+## Implementation
+According to the guidance of [1] - Zedboard, we create a project that Zynq will control 8 leds. Read carefully every step, note down the **_Offset Address_**(ex 0x4120_0000)
+and _its range_(default is 64k) inside _Address Editor_. Following till the step **Export Hardware** remember **Include bitstream**, then close Vivado.
+After that, inside this project folder, there are 2 files that we need - we assume that they got name as below, anyway they are .bit and .xsa(Vivado > 2019):
+1. bitstream.bit (bitstream file)
+2. design_1.xsa (exported hardware file)
 
+### Download device tree resource Xilinx
+Xilinx has a git repo to help in the generation of the board device tree : https://github.com/Xilinx/device-tree-xlnx
+The repository is organized in multiple branches targeting specific versions of Vivado. According to your **Vivado's version**, It is **_Very crucial_** choosing the right branch corresponding to 
+Vivado's version or maybe the same year or you never know why it doesn't work.
+In my experiment, I was using Vivado 2023.1. Therefore, the Xilinx's folder that I downloaded always had branch version as 2023.1 or atleast 2023.
 
+``` shell
+#create a folder to contain all working files, with me LinuxZedboard
+mkdir LinuxZedboard
+cd LinuxZedboard
 
+#clone the matching version
+git clone -b xlnx_rel_v2023.1 https://github.com/Xilinx/device-tree-xlnx
+```
 
+### Building files
+**Explaination** :
+- XSCT : the path to the xsct binary in Vitis installation
+- XSA_FILE : the path toward the .xsa file generated in step 1
+- XILINX_DTG : the path to the xilinx device tree generator folder "device-tree-xlnx"
+- BUILD_PATH : a valid path to hold temporary data
+- OUTPUT_PATH : a valid path where important files will be copied
 
+Firstly, create a xsct_script.tcl inside the same folder **LinuxZedboard**:
+``` xsct_script.tcl
+# create file
+touch xsct_script.tcl
 
+# allow to run script
+chmod 777 xsct_script.tcl
 
+# modify xsct_script.tcl with gedit or nano, vim,...
+gedit xsct_script.tcl
 
+# copy all lines below into script without modifying it
+# Build parameters
+set XSA_FILE [lindex $::argv 0]
+set XILINX_DTG [lindex $::argv 1]
+set BUILD_DIR [lindex $::argv 2]
+set OUTPUT_DIR [lindex $::argv 3]
 
+# Open design + set repo path for device tree
+hsi::open_hw_design $XSA_FILE
+hsi::set_repo_path $XILINX_DTG
 
+# Generate FSBL
+hsi::generate_app -hw [hsi::current_hw_design] -os standalone -proc ps7_cortexa9_0 -app zynq_fsbl -compile -sw fsbl -dir $BUILD_DIR
+exec cp $BUILD_DIR/executable.elf $OUTPUT_DIR/fsbl.elf
 
+# Generate  + Compile device tree
+hsi::create_sw_design device-tree -os device_tree -proc ps7_cortexa9_0
+hsi::generate_target -dir $BUILD_DIR/my_dts
+cd $BUILD_DIR/my_dts
+exec gcc -E -nostdinc -undef -D__DTS__ -x assembler-with-cpp -o device-tree.dts system-top.dts
+exec dtc -I dts -O dtb -o $OUTPUT_DIR/device-tree.dtb $BUILD_DIR/my_dts/device-tree.dts
+
+# Close design
+hsi close_hw_design [hsi::current_hw_design]
+```
+
+Secondly, create a build.sh inside the same folder **LinuxZedboard**:
+``` build.sh
+# create file
+touch build.sh
+
+# allow to run script
+chmod 777 build.sh
+
+# modify xsct_script.tcl with gedit or nano, vim,...
+gedit build.sh
+
+# -> then copy all lines below into build.sh and modify them.
+
+#! /bin/bash
+
+# Set your build parameters here
+XSCT=/PATH_TO_VITIS/VITIS_VERSION/bin/xsct
+XSA_FILE=/PATH_TO_EXPORTED_HARDWARE_FILE/design_1.xsa
+XILINX_DTG=/PATH_TO_THIS_FOLDER/LinuxZedboard/device-tree-xlnx
+BUILD_PATH=/tmp/build_dir
+OUTPUT_PATH=/tmp/output_dir
+###########################################
+
+# Do not edit past this point
+BUILD_DIR=$(realpath ${BUILD_PATH})
+OUTPUT_DIR=$(realpath ${OUTPUT_PATH})
+
+## Prepare BUILD_DIR
+if test -d ${BUILD_DIR}; then
+  rm -rf ${BUILD_DIR}/*
+else
+  mkdir -p ${BUILD_PATH}
+fi
+
+## Prepare OUTPUT_DIR
+if test -d ${OUTPUT_DIR}; then
+  rm  -rf ${OUTPUT_DIR}/fsbl.elf
+  rm  -rf ${OUTPUT_DIR}/device-tree.dtb
+  echo "Deleting old files ..."
+else
+  mkdir -p ${OUTPUT_DIR}
+fi
+
+${XSCT} xsct_script.tcl ${XSA_FILE} ${XILINX_DTG} ${BUILD_DIR} ${OUTPUT_DIR}
+```
+After that run build.sh, inside _/tmp/output_dir_ copy 2 files **device-tree.dtb** and **fsbl.elf** into folder LinuxZedboard
+```
+# in the same LinuxZedboard folder run this command
+cp /tmp/output_dir/* .
+```
 
 
 
