--- a/1.Develop_Hardware.md
+++ b/1.Develop_Hardware.md
@@ -121,7 +121,7 @@ fi
 
 ${XSCT} xsct_script.tcl ${XSA_FILE} ${XILINX_DTG} ${BUILD_DIR} ${OUTPUT_DIR}
 ```
-After that run build.sh, inside _/tmp/output_dir_ copy 2 files **device-tree.dtb** and **fsbl.elf** into folder LinuxZedboard
+After that run build.sh, inside _/tmp/output_dir_ copy 2 files **device-tree.dtb** and **fsbl.elf** into folder LinuxZedboard. And also **bitstream.bit**
 ```
 # in the same LinuxZedboard folder run this command
 cp /tmp/output_dir/* .
