--- a/5.SetupSDcard.md
+++ b/5.SetupSDcard.md
@@ -55,8 +55,8 @@ lsblk
 # ├─nvme0n1p1 259:1    0   512M  0 part /boot/efi
 # └─nvme0n1p2 259:2    0 476,4G  0 part /var/snap/firefox/common/host-hunspell
 
-# the partition is /dev/mmcblk0p2, so we will mount it
-sudo mount /dev/mmcblk0p2 /mnt
+# the partition is /dev/mmcblk0p1 - BOOTFS, so we will mount it
+sudo mount /dev/mmcblk0p1 /mnt
 sudo cp boot.bin boot.scr bitstream.bit device-tree.dtb uImage /mnt
 
 # Check if all copies are oke
