--- a/1.Develop_Hardware.md
+++ b/1.Develop_Hardware.md
@@ -3,6 +3,13 @@
 > Create an alias in .bashrc to help running XSCT in current folder. \
 > or if you don't have a habit of using it, then add "_alias xsct='source /PATH-TO-VITIS/VITIS-VERSION/settings64.sh; xsct_'".
 
+And also a lot of packages which you need to install, remember to check all the processes to know the bug, almost of time is missing packages.
+```
+# 2 packages neccessary
+sudo apt install arm-linux-gnueabihf-gcc
+sudo apt install u-boot-tools device-tree-compiler
+```
+
 ## Peripheral utilisation
 For simplicity, in this tutorial we only use 8 Leds on Zedboard
 | Offset  | Name     | Access  | Description  |
